# mm-recomp-http-bridge

./: CMakeLists.txt  README.md  mod.toml  project.py
src/extlib/: lib_main.cpp
src/mod/: always_spin_attack.c  http_bridge.c
thunderstore_info/: CHANGELOG.md  README.md
